# poisson-recon-pybind

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
extlib/: CMakeLists.txt
poisson_recon_pybind/: __init__.py  version.py
src/: eigen.cpp  poisson_recon_bind.cpp  poisson_surface_reconstruction.cpp
tests/: test_create_poisson_surface.py
